feat: rapid development with integrations
