# src/controllers/auth.controller.ts
@@ -1,19 +1,19 @@
 import { Request, Response } from "express";
 import { AuthService } from "../services/auth.service.js";
 import { asyncHandler } from "../middlewares/asyncHandler.js";
+import { BrokerDTO } from "../dtos/auth.dto.js";
 
 export class AuthController {
   login = async (req: Request, res: Response) => {
     const { email, password } = req.body;
+    console.log("EMAIL",email,password);
     const token = await new AuthService().login(email, password);
     res.json({ token });
   };
 
   register = asyncHandler(async (req: Request, res: Response) => {
-    const { email, password } = req.body;
-    console.log("EMAIL",email, password)
-    const broker = await new AuthService().register(email, password);
-    res.json(broker);
+    const broker = await new AuthService().register(req.body);
+    res.status(201).json(broker);
   });
 
   logout = async (req: Request & { userId?: string }, res: Response) => {
@@ -22,7 +22,7 @@ export class AuthController {
   };
 
   getMe = async (req: Request & { userId?: string }, res: Response) => {
-    const me = await new AuthService().getMe(req.userId!);
-    res.json(me);
+    const broker = await new AuthService().getMe(req.userId!);
+    res.json(new BrokerDTO(broker));
   };
 }
